# Whisper_Play

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
extension/: background.js  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  webpack.config.js  webrtc-adapter.js
extension/lib/: adapter.js
extension/src/popup/: popup.html
obs-plugin/: CMakeLists.txt  build-webrtc.bat  qt-silent-install.qs  setup-deps.bat  setup-dev.bat  setup-dev.ps1
obs-plugin/cmake/: FindLibObs.cmake  FindWebRTC.cmake
obs-plugin/src/: audio-capture.cpp  audio-capture.hpp  audio_capture.cpp  audio_capture.hpp  plugin-main.cpp  settings-dialog.hpp  webrtc-sender.cpp  webrtc-sender.hpp
obs-plugin/webrtc/: .gcs_entries
server/: package-lock.json  package.json  requirements.txt  server.py  signaling_server.py
server/src/: index.js  translation-server.js
